# Semestralka_POS

./: CMakeLists.txt  README.md  akafuka.c  main.c
client/: CMakeLists.txt  HernaPlocha.cpp  HernaPlocha.h  Hrac.cpp  Hrac.h  Makefile  main.cpp  my_socket.cpp  my_socket.h
client/hernaPlocha/: HernaPlocha.cpp
client/hrac/: Hrac.cpp
server/: CMakeLists.txt  Makefile  main.c
server/hernaPlocha/: hernaPlocha.c  hernaPlocha.h
server/hrac/: hrac.c  hrac.h
server/pos_sockets/: active_socket.c
